--- a/BURCU-WEB/BURCU-WEB/BURCU-WEB/Assets/less/common.css
+++ b/BURCU-WEB/BURCU-WEB/BURCU-WEB/Assets/less/common.css
@@ -35,7 +35,7 @@ nav {
   top: 0;
   left: 0;
   z-index: 2;
-  height: 70px;
+  height: 100px;
   width: 100%;
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
@@ -52,7 +52,7 @@ nav {
 }
 nav .navbar {
   width: 100%;
-  height: 70px;
+  height: 100px !important;
   overflow: hidden;
 }
 h1 {
@@ -76,13 +76,13 @@ h2 {
   zoom: 1;
   vertical-align: middle;
   float: left;
-  height: 70px;
+  height: 100px;
 }
 .ozluy-logo .burcu-name {
   display: inline-block;
   vertical-align: middle;
   margin-left: 16px;
-  padding: 10px 0;
+  padding: 28px 0;
   line-height: 1.5;
   color: #fff;
 }
@@ -139,9 +139,9 @@ a {
   padding-left: 0;
 }
 .navbar-links li {
-  float: left;
-  padding: 15px 12px;
-  font-size: 13px;
+  float: right;
+  padding: 15px 10px;
+  font-size: 14px;
 }
 .navbar-links li a {
   color: #fff;
