--- a/BURCU-WEB/BURCU-WEB/BURCU-WEB/Assets/less/common.less
+++ b/BURCU-WEB/BURCU-WEB/BURCU-WEB/Assets/less/common.less
@@ -41,7 +41,7 @@ nav {
     top: 0;
     left: 0;
     z-index: 2;
-    height: 70px;
+    height: 100px;
     width: 100%;
     -webkit-transition: all 1s ease;
     -moz-transition: all 1s ease;
@@ -60,7 +60,7 @@ nav {
 
 nav .navbar {
     width: 100%;
-    height: 70px;
+    height: 100px !important;
     overflow: hidden;
 }
 
@@ -87,13 +87,13 @@ h2 {
     zoom: 1;
     vertical-align: middle;
     float: left;
-    height: 70px;
+    height: 100px;
 
     .burcu-name {
         display: inline-block;
         vertical-align: middle;
         margin-left: 16px;
-        padding: 10px 0;
+        padding: 28px 0;
         line-height: 1.5;
         color: #fff;
 
@@ -159,9 +159,9 @@ a {
     }
 
     li {
-        float: left;
-        padding: 15px 12px;
-        font-size: 13px;
+        float: right;
+        padding: 15px 10px;
+        font-size: 14px;
 
         a {
             color: #fff;
